@@ -70,6 +70,7 @@ toolbox
    quaternions and 3D rotation matrices.
  - Fix human_sort; this had been broken since 0.1.6.
  - Fix function bootHisto to pass through RNG seed if provided
+ - Deprecate function feq in favor of numpy.isclose.
 
 Changes in Version 0.2.1 (2019-10-02)
 =====================================
